workshop03/task2/bggappv2-svc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
   name: bggappv2-deploy
   labels:
      name: bggappv2-deploy
spec:
   replicas: 3
   selector:
      matchLabels:
         name: bggappv2-pod
   strategy:
      type: RollingUpdate
      rollingUpdate:
         maxSurge: 25%
         maxUnavailable: 25%
   template:
      metadata:
         name: bggappv2-pod
         labels:
            name: bggappv2-pod
      spec:
         containers:
         - name: bggappv2-container
           image: stackupiss/bgg-backend:v2
           imagePullPolicy: IfNotPresent
           args:
             - --prefix
             - /v2
           ports:
             - name: bggapp-port 
               containerPort: 3000
           livenessProbe:
             httpGet:
               path: /v2/healthz
               port: 3000
             failureThreshold: 3
             periodSeconds: 30
           readinessProbe:
             httpGet:
               path: /v2/healthz
               port: 3000
             failureThreshold: 3
             periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: bggappv2-svc
spec:
  type: ClusterIP
  selector:
    name: bggappv2-pod
  ports:
    - port: 80
      targetPort: bggapp-port
