workshop03/task2/bggdb-svc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
   name: bggdb-deploy
   namespace: bggns
   labels:
      name: bggdb-deploy
spec:
   replicas: 1
   selector:
      matchLabels:
         name: bggdb-pod
         version: v1
   template:
      metadata:
         name: bggdb-pod
         labels:
            name: bggdb-pod
            version: v1
      spec:
         volumes:
           - name: bggdb-vol
             persistentVolumeClaim:
               claimName: bgg-pvc
         containers:
         - name: bggdb-container
           image: stackupiss/bgg-database:v1
           imagePullPolicy: IfNotPresent
           ports:
             - name: bggdb-port 
               containerPort: 3306
           volumeMounts:
               - name: bggdb-vol
                 mountPath: /var/lib/mysql
---
apiVersion: v1
kind: Service
metadata:
  name: bggdb-svc
spec:
  type: ClusterIP
  selector:
    name: bggdb-pod
    version: v1
  ports:
    - name: bggdb-svc-port
      port: 3306
      targetPort: bggdb-port
